src/apps/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: nginx
          image: ghcr.io/linuxfight/website:1.0.0
          ports:
            - containerPort: 80
