src/apps/website/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  parentRefs:
    - name: kube-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "lxft.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: website
          port: 80
